--- a/client/src/App.css
+++ b/client/src/App.css
@@ -91,8 +91,11 @@
   justify-content: space-between;
 }
 
-.fa-trash-alt, .fa-edit, .fa-copy, .fa-expand{
+.fa-trash-alt, .fa-edit, .fa-copy, .fa-expand, .fa-whatsapp{
   color: #DE4E41;
+}
+.fa-trash-alt:hover, .fa-edit:hover, .fa-copy:hover, .fa-expand:hover, .fa-whatsapp:hover{
+  color: white;
 }
 
 .quote-card{
